# linux_scripts_dump

./: .gitignore  .gitmodules  README.md  any_cheat_code.txt  arp_bc.sh  arp_rep_bc.sh  arp_req_reply.sh  arp_uni.sh  auto_ssh.sh  auto_ssh_v1.sh  auto_ssh_v2.sh  igmp_easy_setup.sh  ptp_clock_get.json  ptp_clock_set.json  read.py  read_write.py  setup_dongle_normal.sh  test_json.sh  vlan.sh  vlan_priority_test.sh
EVB-KSZ9477/: README.md  ksz9477_hsr.sh  port_mirror.sh
app_testing/: Makefile  helloworld.c
device_testing_scripts/: ksz8895_vlan_prio.py  ksz8895_vlan_prio_dump_registers.py  ksz8895_vlan_prio_read_mib.py  ksz8895_vlan_prio_setup_client.sh  ksz8895_vlan_prio_setup_host.sh  ksz8895_vlan_prio_setup_mirror_port2_4_to_port1.py  ksz8895_vlan_prio_setup_mirror_port5_to_port1.py  ksz8895_vlan_prio_setup_switch.py  ksz8895_vlan_prio_transfer_to_dut.sh  ksz9131_sqi_read.sh  transfer_to_dut.sh  vsc8211_mdio_gpio.sh
ims_proj/: At Home Flag - Research.docx  Checkin_AssetUsingID_JSONParsed.py  Checkout_AssetUsingID_JSONParsed.py  Get_AssetDetailsUsingAssetTag_JSONParsed.py  Get_MyUserDetails_JSONParsed.py  Get_StatusLabels_JSONParsed.py  static_ip.sh
mdio_bitbang_cm4/: README.md  build_code.sh  build_dtoverlay.sh  mdio-gpio-cm4.dtso  mdio_gpio_cm4.dtso  mepa_mdio-tool_connector.c  spi1-3cs-overlay-test.dtso  sudo mdio gpio-0.sal
modules/: Makefile  hello_world.c  hello_world.ko
tcpip_testing_scripts/: arp_reg.sh  arp_uni_home.sh  igmp_easy_setup.sh  ip_multicast_test.sh  (+13 more)
win32_mcp2210_c/my_test_hid_app/: CMakeLists.txt  my_test_hid_app.c  my_test_hid_app.h.in
(+56 files in other folders)
